--- a/boutique/exit/index.html
+++ b/boutique/exit/index.html
@@ -34,7 +34,7 @@
   <section class="single">
     <article>
       <div>
-        <h3 class="letterhead">Thanks for supporting wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Merci de soutenir l'art de la faune.</font></h3>
+        <h3 class="letterhead">Thanks for supporting wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Merci de soutenir l'art de la nature.</font></h3>
         <p class="linebreak color">Exit through the <a href="../" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
       </div>
 
