--- a/dono/index.html
+++ b/dono/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="" />
+  <meta name="description" content="Animat Habitat is a non-profit organization that creates art for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Animat Habitat est un organisation &agrave; but non-lucratif qui cr&eacute;e de l'art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels." />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -45,7 +45,7 @@
       <div class="clear polyptych">
 
         <div>
-          <a href="https://www.paypal.me/animathabitat" title="PayPal / Animat Habitat" rel="noopener"><button>Donate<font class="fr">&nbsp;&#92;&nbsp;Don</font></button></a>
+          <a href="https://www.paypal.com/donate/?hosted_button_id=D9WFX6HM23ZYC" title="PayPal / En / Animat Habitat" rel="noopener"><button>Donate<font class="fr">&nbsp;&#92;&nbsp;Don</font></button></a>
           <p class="linebreak lineend">Support independent art at Animat Habitat with any amount you can <em>with no strings attached</em>.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat avec tout montant que vous le pouvez sans aucune condition.</font></p>
 
           <pre class="thin"></pre>
@@ -80,8 +80,6 @@
 
           <pre class="thin"></pre>
 
-          <!-- <p class="linebreak small"><em>This council is for anyone terribly partial to the periwinkle blue&hellip;</em><font class="fr">&nbsp;&#92;&nbsp;<em>Ce conseil est pour ceux qui sont terriblement partiels au bleu pervenche&hellip;</em></font></p> -->
-
           <p class="linebreak small">Members of the Periwinkle Blue Council have an opportunity to submit nominees for the Annual Nature Documentary Award, to access Periwinkle Blue screenings of select nominees, and to vote for a best film or series or mini-series of the year.<font class="fr">&nbsp;&#92;&nbsp;Les membres du Conseil Bleu Pervenche ont la possibilit&eacute; de soumettre des nomin&eacute;s pour la revue annuelle des documentaire sur la nature, d'acc&eacute;der &agrave; des projections priv&eacute;es de certains nomin&eacute;s et de voter pour le meilleur film, s&eacute;rie ou mini-s&eacute;rie de l'ann&eacute;e.</font></p>
 
         </div>
@@ -113,18 +111,9 @@
 
       </div>
 
-      <!-- <div class="clear diptych">
-
-        <div class="quote" id="footnotes">
-
-          <p class="small"><sup>1</sup> Donation is accepted with PayPal. For a donation of more than CA$250 &ndash; and for secure wiring instructions to send funds directly to our bank account &ndash; please contact the account office at Animat Habitat [<a href="mailto:account@animathabitat.org?subject=Donation%C2%A0%5C%C2%A0Don%C2%A0-%C2%A0The%C2%A0Wire" title="Request instruction to send a secure wire transfer to Animat Habitat." target="_blank" rel="noopener">account&ndash;animathabitat.org</a>]. Thank you for your support of independent art at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Le don est accept&eacute; avec PayPal. Pour un don de plus de 250 $ CA &ndash; et pour obtenir des instructions de virement s&eacute;curis&eacute; pour envoyer des fonds directement sur notre compte bancaire &ndash; veuillez contacter le bureau de compte chez Animat Habitat. Merci pour votre soutien &agrave; l'art ind&eacute;pendant chez Animat Habitat.</font></p>
-
-        </div>
-      </div> -->
-
       <div>
         <h3 class="linebreak"><font>Official Selections<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections officielles</font></font></h3>
-        <p>Animat Habitat creates art for the conservation of endangered species and their natural habitats, and it is our honour to support a small selection of wildlife conservation projects. As a small studio, it is not in our interest to overextend commitments. We believe in on-going partnerships to support the long term sustainability of these projects. Through sales of <em>White Elephant</em> and of the art behind the scenes, our not-for-profit organization has invested more than CA$3,000 in 6 projects across 3 countries&mdash;to date. Please follow links below to learn about the wildlife conservation projects in association with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat cr&eacute;e de l'art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels. C'est notre honneur de soutenir une petite s&eacute;lection de projets de conservation de la faune. En tant que petit studio, nous n'avons pas int&eacute;r&ecirc;t &agrave; d&eacute;passer nos engagements. Nous croyons aux partenariats continus pour soutenir la durabilit&eacute; &agrave; long terme de ces projets. Gr&acirc;ce &agrave; la vente des &oelig;uvres d'art, notre organisation &agrave; but non lucratif a pu investir de plus de 3 000 $ CA &agrave; 4 projets dans 2 pays &mdash; &agrave; ce jour. Veuillez suivre les liens ci-dessous pour en savoir plus sur les projets en association avec les sc&egrave;nes chez Animat Habitat.</font></p>
+        <p>Animat Habitat creates art for the conservation of endangered species and their natural habitats, and it is our honour to support a small selection of wildlife conservation projects. As a small studio, it is not in our interest to overextend commitments. We believe in on-going partnerships to support the long term sustainability of these projects. Through sales of <em>White Elephant</em> and of the art behind the scenes, our not-for-profit organization has invested more than CA$3,000 in 6 projects across 3 countries&mdash;to date. Please follow links below to learn about the wildlife conservation projects in association with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat cr&eacute;e de l'art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels. C'est notre honneur de soutenir une petite s&eacute;lection de projets de conservation de la nature. En tant que petit studio, nous n'avons pas int&eacute;r&ecirc;t &agrave; d&eacute;passer nos engagements. Nous croyons aux partenariats continus pour soutenir la durabilit&eacute; &agrave; long terme de ces projets. Gr&acirc;ce &agrave; la vente des &oelig;uvres d'art, notre organisation &agrave; but non lucratif a pu investir de plus de 3 000 $ CA &agrave; 4 projets dans 2 pays &mdash; &agrave; ce jour. Veuillez suivre les liens ci-dessous pour en savoir plus sur les projets en association avec les sc&egrave;nes chez Animat Habitat.</font></p>
 
       </div>
 
@@ -159,7 +148,7 @@
 
           <div>
             <a href="../url/-org/sheldrickwildlifetrust-orphans/" title="Sheldrick Wildlife Trust (SWT) / Adopt an Elephant" target="_blank" rel="noopener"><button>SWT <font class="small">US&dollar;</font></button></a>
-            <p class="linebreak lineend">Support wildlife conservation projects at Sheldrick Wildlife Trust in Kenya.<font class="fr">&nbsp;&#92;&nbsp;Soutenez les projets de conservation de la faune au Kenya.</font></p>
+            <p class="linebreak lineend">Support wildlife conservation projects at Sheldrick Wildlife Trust in Kenya.<font class="fr">&nbsp;&#92;&nbsp;Soutenez les projets de conservation de la nature au Kenya.</font></p>
           </div>
 
         </div>
@@ -167,24 +156,6 @@
       </div>
 
       <br>
-
-      <!-- <div class="clear" id="scene-two">
-
-        <div>
-          <p class="scene-two">Scene two official selections.<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections officielles avec sc&egrave;ne deux.</font></p>
-
-        </div>
-
-        <div class="clear polyptych">
-
-          <div>
-            <a href="../url/-org/worldwildlife-tiger/" title="World Wildlife Fund (WWF) / Adopt a Tiger" target="_blank" rel="noopener"><button>WWF &ndash; International</button></a>
-            <p class="linebreak lineend">Support global wildlife conservation projects at World Wildlife Fund for Nature.<font class="fr">&nbsp;&#92;&nbsp;Soutenez les projets mondiaux de conservation de la nature chez le Fonds mondial pour la nature.</font></p>
-          </div>
-
-        </div>
-
-      </div> -->
 
     </article><br class="clear">
   </section>
@@ -206,10 +177,10 @@
 </body>
 
 <script>
-  var s_council = document.getElementById("silver-council"),
-      s_council_a = document.getElementById("silver-council-a"),
-      r = document.querySelector(':root'),
-      toggle_fr = 0;
+  var r = document.querySelector(':root'),
+      toggle_fr = 0,
+      s_council = document.getElementById("silver-council"),
+      s_council_a = document.getElementById("silver-council-a");
 
   s_council.style.display = "none";
 
