--- a/index.html
+++ b/index.html
@@ -65,34 +65,6 @@
 
       <div class="clear diptych">
 
-        <!-- <div>
-          <a class="nav-block block-two" href="scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">
-            <div class="clear ptych-center triptych ptych-fixed">
-              <div class="clear ptych-left ptych-bottom">
-                <img alt="" src="inc/uploads/02/1921.rodchenko.the-end-of-painting.1.jpg">
-
-              </div>
-
-              <div class="clear ptych-center ptych-bottom">
-                <img alt="" src="inc/uploads/02/1921.rodchenko.the-end-of-painting.2.jpg">
-
-              </div>
-
-              <div class="clear ptych-right ptych-bottom">
-                <img alt="" src="inc/uploads/02/1921.rodchenko.the-end-of-painting.3.jpg">
-
-              </div>
-
-            </div>
-            <div>
-              <h3><font class="scene-two">&plus; White Tiger (2024)</font></h3>
-              <p>Oil painting of a tiger in a taiga forest on fire behind the trees.<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile d'un tigre dans une for&ecirc;t de la ta&iuml;ga en feu derri&egrave;re les arbres.</font></p>
-            </div>
-
-          </a>
-
-        </div> -->
-
         <div>
           <a class="nav-block block-one" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers (2018)">
             <img src="inc/img/last-of-the-big-tuskers/lotbt.poster.art.480-233.jpg" width="480" height="233" class="full" alt="Last of the Big Tuskers (documentary film, 2018) poster art." />
@@ -110,7 +82,7 @@
             <img src="inc/img/oafa.1.cover.banner.480-160.jpg" width="480" height="160" class="full" alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;&nbsp;art de couverture." />
             <div>
               <h3 id="register-head"><font class="scene-one">&plus; White Elephant (2024)</font></h3>
-              <p>Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.<font class="fr">&nbsp;&#92;&nbsp;Voyageons avec un &eacute;l&eacute;phant &agrave; travers une mer de sable &mdash; une bande dessin&eacute;e, une app compagnon et une invitation &agrave; changer la fa&ccedil;on dont nous regardons la faune.</font></p>
+              <p>Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.<font class="fr">&nbsp;&#92;&nbsp;Voyageons avec un &eacute;l&eacute;phant &agrave; travers une mer de sable &mdash; une bande dessin&eacute;e, une app compagnon et une invitation &agrave; changer la fa&ccedil;on dont nous regardons la nature.</font></p>
             </div>
 
           </a>
@@ -187,7 +159,7 @@
       </div>
 
       <div class="quote ptych-left">
-        <p class="lineend">Please direct any feedback @<a href="url/tw/animathabitat/" title="Twitter / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>.<font class="fr">&nbsp;&#92;&nbsp;Envoyez-nous vos commentaires.</font></p>
+        <p class="lineend">Follow what's happening @<a href="url/tw/animathabitat/" title="Twitter / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>.<font class="fr">&nbsp;&#92;&nbsp;Suivez ce qui se passe chez Animat Habitat.</font></p>
 
         <pre class="thin"></pre>
 
