--- a/princeps/index.html
+++ b/princeps/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Principal champions for wild animals and their natural habitats." />
+  <meta name="description" content="Principal champions for wild animals and their natural habitats.&nbsp;&#92;&nbsp;Principaux champions des animaux sauvages et de leurs habitats naturels." />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
