--- a/scene/one/elephant-anatomy/index.html
+++ b/scene/one/elephant-anatomy/index.html
@@ -54,7 +54,7 @@
       <div class="desktop-feature">
         <div class="clear ptych-center">
           <img alt="" src="../../../inc/img/01/photograph/museum-of-natural-history.marseille.elephant-skeleton.jpg">
-          <p class="text-right">&copy; Museum of Natural History, Marseille</p>
+          <p class="text-right">Elephant skeleton, Museum of Natural History, Marseille</p>
 
         </div>
 
@@ -95,11 +95,11 @@
         <h3>What's in the Trunk?</h3>
         <p>An elephant trunk is an extension of the upper lip and nose. This highly adapted olfactory organ has nostrils at the tip through which an elephant can breath, has a highly developed sense of smell, and does a hell of a lot more.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
 
-        <p class="linebreak">Elephants have more than forty <s>up to 150</s> thousand muscles in their trunk. An elephant trunk, or proboscis, for which the order of the elephantidae family genus is named: proboscidea, contains sixteen larger muscles for major movements, such as raising the trunk. Thousands of smaller muscle fascicles, or bundles of muscle fibers, allow for finer movements of the trunk. African elephants have two finger-like projections at the tip of the trunk, which they can use to pick grass, leaves and fruit.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
+        <p class="linebreak">Elephants have more than forty <s>up to 150</s> thousand muscles in their trunk. An elephant trunk, or proboscis, for which the order of the elephantidae family genus is named: proboscidea, contains sixteen larger muscles for major movements, such as raising the trunk. Thousands of smaller muscle fascicles, or bundles of muscle fibres, allow for finer movements of the trunk. African elephants have two finger-like projections at the tip of the trunk, which they can use to pick grass, leaves and fruit.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
         <!-- This is similar to that of their ancient ancestors, the mammoth and mastodon and so on, with a large muscle on the top and sides of the trunk, which allows an elephant to raise it. -->
 
-        <p class="linebreak">Elephants use their trunk to skim water holes for the clearer water settled at the surface. Elephants can contain about six to twelve litres of water in their trunk at a time, then spout the water into their mouths or otherwise. Elephants also use their trunk to shower themselves with dust and mud and so on. This an effective sun-block that protects from ultraviolet rays and from parasites. Elephants use their trunk to collect vegetation and to uproot trees, as well as to interact and to communicate with others through smell, sound and touch.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
+        <p class="linebreak">Elephants use their trunk to skim water holes for the clearer water settled at the surface. Elephants can contain about six to twelve litres of water in their trunk at a time, then spout the water into their mouths or otherwise. Elephants also use their trunk to shower themselves with dust and mud and so on. This provides an effective sun-block that protects from ultraviolet rays and from parasites. Elephants use their trunk to collect vegetation and to uproot trees, as well as to interact and to communicate with others through smell, sound and touch.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
 
         <!-- The trunk can be raised as a snorkel in water passages, and directed finely toward the source of a scent. -->
 
@@ -129,7 +129,7 @@
       <div>
         <p>Elephants display a range of emotions, including demonstrating grief at the loss of herd members. Elephants have visited and revisited the bones of past herd members long after she has passed on, even when the sites happen to fall out of the way. An elephant has a spot on the sides of his or her head, behind each eye, which is at times darkened by the secretion of glands near the temporal lobe. These temporal glands are activated when elephants enter into hormonal responses, such as &ldquo;musth&rdquo; as well as highly charged situational stress.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
 
-        <p class="linebreak">Elephant skin is covered with papillae, with hairs of varying color, length, thickness and all of which makes elephant skin skin highly sensitive. Elephants of the same herd will often greet each other with touch.<sup>&nbsp;[<a class="button" onclick="fn();" title="Laursen and Bekoff, 1978">7</a>]</sup></p>
+        <p class="linebreak">Elephant skin is covered with papillae, with hairs of varying color, length, thickness and all of which makes elephant skin highly sensitive. Elephants of the same herd will often greet each other with touch.<sup>&nbsp;[<a class="button" onclick="fn();" title="Laursen and Bekoff, 1978">7</a>]</sup></p>
 
         <p class="linebreak">The hair of elephant calves has a lighter, red-brown color with a softer texture, then grows darker and more coarse. Elephant hair that grows along the back and tail is flattened and can grow to almost a metre in length. Eyelashes that grow up to five inches long help to shade the eyes from dirt and sand swirling in the desert. Elephants also have three eyelids: upper, lower and one that moves vertically. The vertical eyelid is clear, and protects the eyes while allowing them to see.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
@@ -140,7 +140,7 @@
       <div class="desktop-feature">
         <div class="clear ptych-center">
           <img alt="" src="../../../inc/img/01/photograph/swt.tsavo-02.jpg">
-          <p class="text-right">Daphne Sheldrick, Tsavo &copy; <a href="../../../url/-org/sheldrickwildlifetrust.org" target="_blank" title="Sheldrick Wildlife Trust">Sheldrick Wildlife Trust</a></p>
+          <p class="text-right">Daphne Sheldrick, Tsavo &copy; SWT <a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
 
         </div>
 
