--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <img alt="" src="../../../inc/img/01/photograph/2016.kenya.ivory-pile.jpg">
-      <p class="text-right gutter-side"><em>KWS ranger stands guard in Nairobi National Park, 2016</em></p>
+      <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016</p>
 
       <div>
         <p>By setting the pyres ablaze the trophies have been placed beyond economic value. This has demonstrated to the world at large that the cache was destroyed and not pilfered back into the black market. And so it has reaffirmed a commitment to protect the irreplaceable wildlife in Kenya. President Uhuru Kenyatta, who was joined by other African leaders and foreign officials, has demanded a total ban on the ivory trade to protect the future of wild elephants on the continent.</p>
@@ -118,7 +118,7 @@
       <div class="desktop-feature">
         <div class="clear ptych-center">
           <img alt="" src="../../../inc/img/01/hands.off.png">
-          <p class="text-right">Hands Off Our Elephants, Wildlife Direct [<a href="../../../url/-org/wildlifedirect-hands-off-our-elephants/" rel="noopener" target="_blank" title="Wildlife Direct / Hands Off Our Elephants">wildlifedirect.org</a>, recolored]</p>
+          <p class="text-right">Hands Off Our Elephants &copy; Wildlife Direct [<a href="../../../url/-org/wildlifedirect-hands-off-our-elephants/" rel="noopener" target="_blank" title="Wildlife Direct / Hands Off Our Elephants">wildlifedirect.org</a>, recolored]</p>
 
         </div>
 
