--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="White Elephant&mdash;comic book and companion app to change the way we look at wildlife.&nbsp;&#92;&nbsp;&Eacute;l&eacute;phant blanc &mdash; une bande dessin&eactue;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la faune." />
+  <meta name="description" content="White Elephant&mdash;comic book and companion app to change the way we look at wildlife.&nbsp;&#92;&nbsp;&Eacute;l&eacute;phant blanc &mdash; une bande dessin&eactue;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature." />
   <meta name="keywords" content="white elephant, elephant animation, elephant comic book, elephant app, okavango delta" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -43,7 +43,7 @@
       <h1 class="title">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></h1>
       <h3 class="scene-one">Scene one:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="scene();">White<font class="letterspace-sp"> </font><font class="thin">Elephant</font></a></h1>
-      <h3><font class="clear">Comic book and companion app to change the way we look at wildlife.</font><font class="fr">&nbsp;&#92;&nbsp;Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la faune.</font></h3>
+      <h3><font class="clear">Comic book and companion app to change the way we look at wildlife.</font><font class="fr">&nbsp;&#92;&nbsp;Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></h3>
     </div>
   </header>
 
