--- a/scene/one/technology-documentary-2/index.html
+++ b/scene/one/technology-documentary-2/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div>
-        <p>The film takes advantage of a feature length narrative arc to consider the dynamic of a family unit and the ecosystems that surround them. This gives time to connect with individual elephants in the herd, and gives weight to the responsability of a matriarch to lead the way to food and to water, and in an unrelenting habitat and so on. This familiar journey of an elephant herd in Africa is realized as an individual story of a wise and gentle matriarch named Athena. The film is narrated by Chiwetel Ejiofor, who gives voice to the journey of Athena and her family, and mixed with a score that creates space for the imagery to fill in beats of the story in-between. <em><em>The Elephant Queen</em> (2018) turns the plight of elephants in a ravaged landscape into a relatable story of survival.</em></p>
+        <p>The film takes advantage of a feature length narrative arc to consider the dynamic of a family unit and the ecosystems that surround them. This gives time to connect with individual elephants in the herd, and gives weight to the responsibility of a matriarch to lead the way to food and to water, and in an unrelenting habitat and so on. This familiar journey of an elephant herd in Africa is realized as an individual story of a wise and gentle matriarch named Athena. The film is narrated by Chiwetel Ejiofor, who gives voice to the journey of Athena and her family, and mixed with a score that creates space for the imagery to fill in beats of the story in-between. <em><em>The Elephant Queen</em> (2018) turns the plight of elephants in a ravaged landscape into a relatable story of survival.</em></p>
 
       </div>
 
