--- a/scene/one/technology-documentary-big-tuskers/index.html
+++ b/scene/one/technology-documentary-big-tuskers/index.html
@@ -65,7 +65,7 @@
 
         <p class="linebreak">The ivory trade remains a reality that is impossible to ignore when addressing a future for elephants.</p>
 
-        <p class="linebreak">Tusks are more than an indication of social stature for elephants. Elephants need their tusks to survive: to forage, to dig for roots, to dig for water, to strip bark from trees, to topple trees, to defend themselves. Elephant bulls use their tusks in combat for access to females in estrus. The film emphasizes the role of older bull elephants, who become the father figures that young askaris have not had in the matriarchal herd. Old bulls show the ways to water and to survive the challenging landscapes, as well as teach discipline to the young bachelors.</p>
+        <p class="linebreak">Tusks are more than an indication of social stature for elephants. Elephants need their tusks to survive: to forage, to dig for roots, to dig for water, to strip bark from trees, to topple trees, to defend themselves. Elephant bulls use their tusks in combat for access to females in estrus. The film emphasizes the role of older bull elephants, who have become the father figures that young askaris have not had in the matriarchal herd. Old bulls show the ways to water and to survive the challenging landscapes, as well as teach discipline to the young bachelors.</p>
 
         <p class="linebreak">Far too often and for too long, elephants have been poached for their ivory tusks. For the few years leading up to this film, on average, almost one hundred elephants have been killed every day. Every dead elephant is a tragedy for a family-based herd and increasingly for the survival of the highly-intelligent species. The hope for this project is to share the value in keeping elephants alive, in particular big tuskers.</p>
 
@@ -84,7 +84,7 @@
 
         </div>
 
-        <p>The adventure with James Currie and with co-host in the film, and senior ranger at Tembe Elephant Park, Tom Mahamba travels to Kruger National Park, also in South Africa, then on to Kenya to compare the elephants of other national parks: Amboseli, Chyulu Hills, Tsavo, to the last big tuskers of Tembe. The direction of the film remains centered on challenges facing elephant conservation today, pointing to tourism as a solution: managing the revenue from tourism to support the national parks as well as the communities who continue to co-exist on the front lines of a conflict with elephants. The same elephants that people all over the world &ndash; everyone, everywhere &ndash; so clearly uphold in story and in art.</p>
+        <p>The adventure with James Currie and with co-host in the film, and senior ranger at Tembe Elephant Park, Tom Mahamba travels to Kruger National Park, also in South Africa, then on to Kenya to compare the elephants of other national parks: Amboseli, Chyulu Hills, Tsavo, to the last big tuskers of Tembe. The direction of the film remains centred on challenges facing elephant conservation today, pointing to tourism as a solution: managing the revenue from tourism to support the national parks as well as the communities who continue to co-exist on the front lines of a conflict with elephants. The same elephants that people all over the world &ndash; everyone, everywhere &ndash; so clearly uphold in story and in art.</p>
       </div>
 
       <div class="color quote">
