--- a/scene/one/technology-documentary/index.html
+++ b/scene/one/technology-documentary/index.html
@@ -43,12 +43,12 @@
 
         <p class="linebreak"><em>This article shares a study of the natural world as represented in documentary film. This study has focused on the message, narrative and perspective of each film, ultimately communicating the plight of the natural world. Each of the following documentaries has an important story to tell, each story has a unique perspective to show, and each film has applied a part of that unique perspective within its story with some success.</em></p>
 
-        <p class="linebreak"><em>This research first considers three documentary films. Two are Netflix originals: <em>Virunga</em> (2014) and <em>The Ivory Game</em> (2016). Another: <em>Before the Flood</em> (2016) have been licensed to Netflix. <em>Before the Flood</em> is a film hosted and produced by Leonardo di Caprio. In fact, all three of the documentaries in this study were in part produced by di Caprio. In these instances, Leo has acted as a positive influence and Netflix has&hellip; The point is that Leo and Netflix are not the headline, here. This preface serves simply as a reflection of today&mdash;a day where celebrity thought leaders and video streaming services are who and what people look to for stories. The point is: this is when and where people are.</em></p>
+        <p class="linebreak"><em>This research first considers three documentary films. Two are Netflix originals: <em>Virunga</em> (2014) and <em>The Ivory Game</em> (2016). Another: <em>Before the Flood</em> (2016) have been licensed to Netflix. <em>Before the Flood</em> is a film hosted and produced by Leonardo di Caprio. In fact, all three of the documentaries in this study were in part produced by di Caprio. In these instances, Leo has acted as a positive influence and Netflix has&hellip; The point is that Leo and Netflix are not the headlines here. This preface serves simply as a reflection of today&mdash;a day where celebrity thought leaders and video streaming services are who and what people look to for stories. The point is: this is when and where people are.</em></p>
 
         <h3 class="linebreak">Virunga (2014)</h3>
         <p>1h 40min</p>
 
-        <p class="linebreak"><em>Virunga</em>&mdash;a Netflix and Grain Media documentary film tells a story of conservation in the context of a war. This first film shares the stakes for park rangers risking their lives to save one of Africa's most precious national parks and its endangered gorillas. <em>In the forested depths of eastern Congo lies Virunga National Park, one of the most bio-diverse places on Earth and home to the planet’s last remaining mountain gorillas.</em></p>
+        <p class="linebreak"><em>Virunga</em>&mdash;a Netflix and Grain Media documentary film tells a story of conservation in the context of a war. This first film shares the stakes for park rangers risking their lives to save one of Africa's most precious national parks and its endangered gorillas. <em>In the forested depths of eastern Congo lies Virunga National Park, one of the most biodiverse places on Earth and home to the planet’s last remaining mountain gorillas.</em></p>
       </div>
 
       <div class="color quote">
@@ -72,15 +72,6 @@
 
       <div>
         <p>The opening titles for the film strike a visual tone that resonates throughout the score as well as the composition of documentary footage and nature cinematography. The film is scored by Patrick Jonsson, and features an original song &ldquo;<a href="../../../url/yt/iJ9WXvPhTrs/" title="We Will Not Go by J. Ralph Feat. Salif Keita, Youssou Ndour, Fally Ipupa" target="_blank" rel="noopener">We Will Not Go</a>&ldquo; composed by J. Ralph (featuring Salif Keita, Youssou Ndour and Fally Ipupa). The original song serves as a bookend, underscoring the themes in the opening of the film, then repeating over the end credits and recalling the events of the film. The torn and colorful look of the opening titles, designed by Framestore, directly supports the theme of a war-torn history in Congo as well as reflects the vibrant culture and spirit of its subjects: the Congolese. The pattern of colors applied within the title lettering, of course, is the national flag of the Democratic Republic of Congo.</p>
-
-      <!-- </div>
-
-      frame-src www.youtube.com;
-
-      <iframe src="https://player.vimeo.com/video/92226142?color=ffcf60&title=0&byline=0&portrait=0" class="video" frameborder="0" sandbox="allow-scripts allow-same-origin" allow="autoplay; fullscreen" allowfullscreen></iframe>
-      <p class="text-right gutter-side"><a class="title" href="//vimeo.com/grainmedia" rel="noopener" target="_blank" title="Vimeo / Grain Media">Virunga</a>, Official Trailer 2014 &copy; Grain Media</p>
-
-      <div> -->
 
         <p class="linebreak">The film, directed by Orlando von Einsiedel, combines investigative journalism and nature documentary in a gripping expos&eacute; of the realities of life in the Congo. The film documents corruption and imposition of <em>big</em> oil companies, namely SOCO, as well as other <em>big</em> interests, such as electronics industries, on an otherwise historically undermined but good natured people who have seen some benefit from tourism driven to the park. Despite claiming in June 2014 that they would halt operations, SOCO had refused to withdraw unconditionally from Virunga by the release of the film.<sup>&nbsp;[<a class="button" onclick="fn();" title="Ramsey, 2017.">1</a>]</sup></p>
 
@@ -181,10 +172,10 @@
       <div>
         <p>Like <em>Virunga</em> (2016), the stakes of life and death are not far from the surface in a documentary such as this. This film follows the venture of two separate investigatory parties, in particular the Intelligence service in Tanzania, NTSCIU, headed by Elisifa Ngowi as well as the Internet platform dedicated to wildlife crime whistle-blowers, <a href="../../../url/-org/wildleaks/" title="Wild Leaks" target="_blank" rel="noopener">Wild Leaks</a>, headed by Andrea Crosta. Altogether, the two investigations span the story of combating the ivory trade, from the poachers in Africa to the markets in Asia. These ventures serve as the driving force for the film, with a team of people communicating the context alongside the action.</p>
 
-        <p class="linebreak">For Andrea and his network, &ldquo;we want te get as much proof as possible on [top ivory dealers] to show the Chinese government that the illegal trade [&hellip;] is out of hand, to give them more reasons to close down this evil market.&rdquo; For people working with Andrea, in particular Chinese activist and investigative journalist Hongxiang Huang, the exposure of a role on this team aims to counter a common narrative for Chinese people and the ivory market in China. Huang says:</p>
+        <p class="linebreak">For Andrea and his network, &ldquo;we want to get as much proof as possible on [top ivory dealers] to show the Chinese government that the illegal trade [&hellip;] is out of hand, to give them more reasons to close down this evil market.&rdquo; For people working with Andrea, in particular Chinese activist and investigative journalist Hongxiang Huang, the exposure of a role on this team aims to counter a common narrative for Chinese people and the ivory market in China. Huang says:</p>
 
         <div>
-          <p>&ldquo;It is very important to the let the world see, there are Chinese trying to fight for elephants, as well&mdash;trying to fight back. This could be the turning point of this whole battle for elephants: from now on, China will be part of the solution.&rdquo; </p>
+          <p>&ldquo;It is very important to let the world see, there are Chinese trying to fight for elephants, as well&mdash;trying to fight back. This could be the turning point of this whole battle for elephants: from now on, China will be part of the solution.&rdquo; </p>
 
         </div>
 
@@ -210,7 +201,7 @@
       </div> -->
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Fencing development is the future when you look at Africa. There is no choice involved, it is going to happen, and people of Africa want the same things that everyone else wants. They want to be able to have a TV. They want to have a house, which is not knocked over. The want to be able to store their food in an area where an animal does not get in there and finish it. Internet, which no one really has yet, and without it, these guys are never going to agree to living with wildlife unless they get the best of both worlds.</em><font class="color text-quote">&rdquo;</font> <font class="color thin">&mdash;&nbsp;Craig Miller, head of security at Big Life Foundation. <em>The Ivory Game</em> (2016)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Fencing development is the future when you look at Africa. There is no choice involved, it is going to happen, and people of Africa want the same things that everyone else wants. They want to be able to have a TV. They want to have a house, which is not knocked over. They want to be able to store their food in an area where an animal does not get in there and finish it. Internet, which no one really has yet, and without it, these guys are never going to agree to living with wildlife unless they get the best of both worlds.</em><font class="color text-quote">&rdquo;</font> <font class="color thin">&mdash;&nbsp;Craig Miller, head of security at Big Life Foundation. <em>The Ivory Game</em> (2016)</font></h4>
       </div>
 
       <img alt="The Ivory Game lockup" src="../../../inc/img/01/title/netflix.the-ivory-game.lockup.png" />
