--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
   <meta name="description" content="White Tiger&mdash;oil painting of a tiger in the taiga.&nbsp;&#92;&nbsp;Tigre blanc &mdash; peinture &agrave; l’huile d’un tigre dans la ta&iuml;ga." />
-  <meta name="keywords" content="white tiger, tiger painting, tiger art, tiger app, putorana plateau" />
+  <meta name="keywords" content="white tiger, tiger painting, tiger app, tiger art, putorana plateau" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.</title>
