--- a/societas/r/confirmation/index.html
+++ b/societas/r/confirmation/index.html
@@ -35,7 +35,7 @@
     <article>
 
       <div>
-        <h3 class="letterhead">Thanks for getting behind wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Merci de soutenir l'art de la faune.</font></h3>
+        <h3 class="letterhead">Thanks for getting behind wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Merci de soutenir l'art de la nature.</font></h3>
 
       </div>
 
