--- a/societas/r/index.html
+++ b/societas/r/index.html
@@ -44,7 +44,7 @@
 
         <div>
           <h3 class="letterhead">Behind the scenes<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses</font></h3>
-          <p>Register for membership behind the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Adh&eacute;sion aux mises &agrave; jour dans les coulisses de l'art de la faune.</font></p>
+          <p>Register for membership behind the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Adh&eacute;sion aux mises &agrave; jour dans les coulisses de l'art de la nature.</font></p>
 
         </div>
 
