--- a/support/index.html
+++ b/support/index.html
@@ -6,11 +6,11 @@
   <meta name="google" content="notranslate" />
 
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="" />
+  <meta name="description" content="Animat Habitat sitemap.&nbsp;&#92;&nbsp;Plan du site Web officiel Animat Habitat." />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat site index. &ndash;&nbsp;index du site officiel.</title>
+  <title>Animat Habitat sitemap. &ndash;&nbsp;Plan du site Web officiel Animat Habitat.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
@@ -33,7 +33,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">Animat Habitat</h4>
-        <h2>Site Index<font class="fr">&nbsp;&#92;&nbsp;Index du site officiel</font></h2>
+        <h2>Sitemap<font class="fr">&nbsp;&#92;&nbsp;Plan du site Web</font></h2>
         <h5>animathabitat.com &middot; animathabitat.org</h5>
       </div>
 
