--- a/boutique/medium/digital-numerique/index.html
+++ b/boutique/medium/digital-numerique/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
   <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
-  <meta name="keywords" content="" />
+  <meta name="keywords" content="wildlife digital art, wildlife digital painting, wildlife desktop background, wildlife wallpaper, digital art shop" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques.</title>
