--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
   <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
-  <meta name="keywords" content="" />
+  <meta name="keywords" content="wildlife art print, wildlife art print canada, wildlife giclee, wildlife giclee canada, giclee shop" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es.</title>
