--- a/boutique/medium/original/index.html
+++ b/boutique/medium/original/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
   <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
-  <meta name="keywords" content="" />
+  <meta name="keywords" content="wildlife painting, wildlife painting canada, wildlife drawing, wildlife drawing canada, original art shop" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Animat Habitat boutique. Traditional Artworks. &ndash;&nbsp;Oeuvres traditionels.</title>
