--- a/conservatum/africa-afrique/index.html
+++ b/conservatum/africa-afrique/index.html
@@ -7,8 +7,8 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
-  <meta name="keywords" content="wildlife conservation africa, wildlife conservation botswana, wildlife conservation kenya, habitat botswana, habitat kenya" />
+  <meta name="description" content="Platform for the conservation of biological diversity in Africa.&nbsp;&#92;&nbsp;Plateforme pour la conservation de la diversit&eacute; biologique en Afrique." />
+  <meta name="keywords" content="wildlife conservation africa, wildlife conservation kenya, wildlife conservation botswana, wildlife conservation namibia, wildlife conservation angola" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Animat Habitat c&#333;nservat&#363;m. Africa. &ndash;&nbsp;Afrique.</title>
