--- a/conservatum/index.html
+++ b/conservatum/index.html
@@ -7,8 +7,8 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
-  <meta name="keywords" content="wildlife conservation, wildilfe habitat, habitat conservation, nature conservation, natural habitat conservation" />
+  <meta name="description" content="Platform for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Plateforme de conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels." />
+  <meta name="keywords" content="wildlife conservation, nature conservation, habitat conservation, biological diversity, endangered species" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Animat Habitat c&#333;nservat&#363;m.</title>
